# dominator-bot

./: README.md  metrics_bridge.py  pyproject.toml  requirements.txt  rlbot.toml  run.py  train_configurable.py  train_fast.py  train_ppo_rlgym.py  training_server.py  watch_bot.py
configs/: bot_config.yaml
docs/: architecture.md  deployment_guide.md  training_guide.md
scripts/: __init__.py  evaluate.py  generate_dataset.py  package_submission.py  run_bot.py  train_bc.py  train_league.py  train_ppo.py
src/: __init__.py  bot.py  bot.toml  bot_brain.py  config.py  loadout.toml  ppo_bot.py  ppo_bot.toml  types.py
src/control/: __init__.py
src/eval/: __init__.py
src/kickoff/: __init__.py
src/ppo/: bot.py  bot.toml
src/safety/: __init__.py
src/state/: __init__.py
src/strategy/: __init__.py  ml_policy.py
src/tactics/: __init__.py
src/training/: __init__.py  behavior_cloning.py  league.py  ppo.py
src/utils/: __init__.py
tests/: conftest.py  test_core.py  test_integration.py
